# Y-AOI

./: .gitignore  CMakeLists.txt  README.md  dockerfile  logDocker.txt  main.cpp  toolchain-mingw64.cmake
src/: base64.cpp  base64.h  client.cpp  client.h  main.cpp  server.cpp  server.h
src/api/: api_sender.h
testStun/: CMakeLists.txt  Main.qml  QT6Test_ru_Ru.ts  main.cpp  mainwindow.cpp  mainwindow.h
